--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.14.0",
     "@types/luxon": "^3.4.2",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-datepicker": "^6.2.0",
     "framer-motion": "^11.2.10",
     "luxon": "^3.4.4",
     "next": "14.2.3",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18"
   },
