--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-calendar": "^4.1.0",
     "@types/react-datepicker": "^6.2.0",
     "framer-motion": "^11.2.10",
+    "jotai": "^2.8.3",
     "luxon": "^3.4.4",
     "next": "14.2.3",
     "react": "^18",
